# comfyui-standard-trigger-words

./: CHANGELOG.md  Example Workflow.json  README.md  pyproject.toml  standard_trigger_node_v2.py  standard_trigger_presets.py
js/: standard_trigger_loader.js
