[project]
name = "comfyui-standard-trigger-words"
description = "Interactive button-based trigger word node with 80+ SDXL/Illustrious presets. Click to toggle, right-click to edit, scroll to adjust strength."
version = "1.0.1"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/revisionhiep-create/comfyui-standard-trigger-words"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "comfyui-standard-trigger-words"
Icon = ""
