[project]
name = "comfyui-standard-trigger-words"
description = "Fixed rare disappearing buttons bug and backend execution errors"
version = "1.0.4"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/revisionhiep-create/comfyui-standard-trigger-words"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "Scomfyui-standard-trigger-words"
Icon = ""
