[project]
name = "comfyui-standard-trigger-words"
description = "Rare startup button bug fix for the js file attempt 3"
version = "1.0.5"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/revisionhiep-create/comfyui-standard-trigger-words"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "comfyui-standard-trigger-words"
Icon = ""
